bugfix: header width, primary_menu z-index

--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -14,6 +14,7 @@
     position: sticky;
     background-color: #fff;
     z-index: 10;
+    width: 100%;
 }
 
 @media screen and (max-width: 1439px) {
