--- a/blocks/primary-menu/primary-menu.css
+++ b/blocks/primary-menu/primary-menu.css
@@ -10,7 +10,8 @@
     max-width: 1440px;
     margin: 0 auto;
     box-sizing: border-box;
-    box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
+    z-index: 1;
 }
 
 @media screen and (max-width: 1439px) {
